Some changes in assets

--- a/generator/asset/element/zone/atelierMainZone_choralies/index.html
+++ b/generator/asset/element/zone/atelierMainZone_choralies/index.html
@@ -3,5 +3,6 @@
 			<span class="logo" id="${zoneName}_logo"></span>
 			<span class="title" id="${zoneName}_title"></span>
 			<span class="timer" id="${zoneName}_timer"><span id="progressbar" style="display:none;"> </span></span>
+			<span id="${zoneName}_content"></span>
 		</div>
 		<div style="clear:both;"> </div>
