--- a/generator/asset/web/personalizer/index.html
+++ b/generator/asset/web/personalizer/index.html
@@ -27,32 +27,15 @@
     <!-- Add your site or application content here -->
     <div class="container" ng-view=""></div>
 
-    <script src="components/angular/angular.js"></script>
-    <script src="components/angular-resource/angular-resource.js"></script>
-    <script src="components/angular-cookies/angular-cookies.js"></script>
-    <script src="components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular-resource.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular-cookies.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular-sanitize.min.js"></script>
     <script src="components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script src="components/jquery/jquery.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 
 
-    <!-- build:js scripts/scripts.js -->
-    <script src="scripts/app.js"></script>
-    <script src="scripts/controllers/main.js"></script>
-    <script src="scripts/controllers/onglet.js"></script>
-    <script src="scripts/controllers/start.js"></script>
-    <script src="scripts/services/constants.js"></script>
-    <script src="scripts/services/mongo_Service.js"></script>
-
-    <script src="scripts/services/manager.js"></script>
-    <script src="scripts/services/Manager.js"></script>
-    <script src="scripts/controllers/zone.js"></script>
-    <script src="scripts/directives/tabs.js"></script>
-    <script src="scripts/controllers/add.js"></script>
-    <script src="scripts/controllers/edit.js"></script>
-    <script src="scripts/services/db.js"></script>
-    <script src="scripts/services/bridge.js"></script>
-    <script src="scripts/directives/tooltip.js"></script>
-    <!-- endbuild -->
+    <script src="scripts/scripts.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
