Some changes in personalizer

--- a/generator/asset/maven/personalizer/src/main/webapp/index.html
+++ b/generator/asset/maven/personalizer/src/main/webapp/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="stylesheet" href="styles/main.css">
+    <!--<link rel="stylesheet" href="styles/main.css"> -->
       <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
       <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
   </head>
@@ -36,7 +36,7 @@
     <!--<script src="components/requirejs/require.js"></script>
     <script src="components/crypto-js/components/sha1.js"></script> -->
 
-    <script src="scripts/cfe8130d.scripts.js"></script>
+    <script src="scripts/02ecb547.scripts.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
