--- a/generator/asset/element/zone/mainZone_irsam/index.html
+++ b/generator/asset/element/zone/mainZone_irsam/index.html
@@ -1,5 +1,6 @@
 <!--  zone 1 (info) -->
 <div id="${zoneName}">
-    <span class="logo" id="${zoneName}_logo"></span>
-    <span class="title" id="${zoneName}_title"></span>
+    <span id="${zoneName}_logo"></span>
+    <span id="${zoneName}_title"></span>
+    <span id="${zoneName}_content"></span>
 </div>
