Changement pour le client Irsam

--- a/generator/asset/element/zone/mainZone_irsam/index.html
+++ b/generator/asset/element/zone/mainZone_irsam/index.html
@@ -1,4 +1,4 @@
-<!--  zone 1 (info) -->
+<!--  MainZone Irsam -->
 <div id="${zoneName}">
     <span id="${zoneName}_logo"></span>
     <span id="${zoneName}_title"></span>
