--- a/generator/asset/maven/personalizer/src/main/webapp/index.html
+++ b/generator/asset/maven/personalizer/src/main/webapp/index.html
@@ -33,10 +33,10 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular-sanitize.min.js"></script>
     <script src="components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <!--<script src="components/requirejs/require.js"></script>
-    <script src="components/crypto-js/components/sha1.js"></script> -->
+    <script src="components/crypto-js/rollups/sha1.js"></script>
+    <!--<script src="components/requirejs/require.js"></script> -->
 
-    <script src="scripts/02ecb547.scripts.js"></script>
+    <script src="scripts/c5a0ef2f.scripts.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
