Première fournée de modifications sur le repository : - Résolution des bugs sur le client Irsam (css et renderer) - Début du client Imredd sur le repo - Changement dans le behaviour pour que le smooth fonctionne. - Ajout de l'image dans le renderer RSS de Glc

--- a/generator/asset/element/zone/mainZone_irsam/index.html
+++ b/generator/asset/element/zone/mainZone_irsam/index.html
@@ -1,6 +1,6 @@
 <!--  MainZone Irsam -->
 <div id="${zoneName}">
     <span id="${zoneName}_logo"></span>
-    <span id="${zoneName}_title"></span>
-    <span id="${zoneName}_content"></span>
+    <div id="${zoneName}_title"></div>
+    <div id="${zoneName}_content"></div>
 </div>
