--- a/generator/asset/element/zone/mainZone_glc/index.html
+++ b/generator/asset/element/zone/mainZone_glc/index.html
@@ -1,6 +1,8 @@
 <!--  zone 1 (infos) -->
 <div id="${zoneName}">
-    <span class="logo" id="${zoneName}_logo"></span>
-    <span class="title" id="${zoneName}_title"></span>
+    <div class="title">
+        <div class="logo" id="${zoneName}_logo"></div>
+        <div id="${zoneName}_title"></div>
+    </div>
     <span class="timer" id="${zoneName}_timer"><span id="progressbar" style="display:none;"> </span></span>
 </div>
